Revert reading timeline to notes list, optimize image loading

--- a/_includes/reading_book_detail.html
+++ b/_includes/reading_book_detail.html
@@ -54,8 +54,8 @@
           </div>
 
           <div class="reading-detail-logs">
-            <h3 class="reading-detail-logs-title">Reading timeline</h3>
-            <div class="reading-detail-timeline" data-timeline></div>
+            <h3 class="reading-detail-logs-title">Reading notes</h3>
+            <div class="reading-detail-logs-list" data-logs-list></div>
             <form class="reading-detail-log-form" data-log-form>
               <textarea class="reading-detail-log-input" placeholder="Add a note or thought..." rows="3" data-log-input></textarea>
               <button type="submit" class="reading-detail-log-submit btn btn--small btn--primary">Add note</button>
